@@ -1,5 +1,7 @@
 = master
 
+* Evaluate class_matcher and symbol_matcher blocks in route-block context (jeremyevans)
+
 * Allow class_matcher and symbol_matcher blocks to return non-arrays (jeremyevans)
 
 * Make class_matcher and symbol_matcher plugin be able to build on top of existing registered matchers (jeremyevans)
